# MatchY

./: .dockerignore  .gitignore  .readthedocs.yaml  1_🧬_Home.py  Andrew.csv  Archie.csv  Arwin.csv  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Edward.csv  LICENSE  Louis.csv  README.md  RELEASE_NOTES.md  USER_MANUAL.md  User manual v1.docx  build.ps1  config.ini  main.py  mkdocs.yml  models.py  mutation_rates.csv  mypy.ini  pedigree_example2.tgf  pedigree_large.tgf  pedigree_large_AR.tgf  pedigree_small.tgf  per_marker.py  requirements.txt  simulation.py  streamlit_app.py  test_fixed_bias.py  🧬_Home.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: release.yml
.streamlit/: config.toml
data/: George.csv  Louis.csv  Philip.csv  William.csv  config.ini  kits.json  kits_backup.json  mutation_rates.csv  pedigree_example3.tgf  report_template.html  trace_report_template.html
docs/: PARAMETERS_REFERENCE.md  USER_MANUAL.md  cli-manual.md  gui-manual.md  implementation.md  index.md  technical-manual.md
examples/: 143_RMplex.tgf  Basic_grandfather_2_mutation_final.ini  Basic_uncle_2mut.ini  George.csv  Two_bro_same_mut.ini  William.csv  bias.ini  example_config.ini  example_with_trace.json  fo2025.ini  mockfo.json  mockfo.tgf  mutation_rates.csv  ped143_RM_ht.ini  pedigree_example1.tgf  pedigree_example2.tgf  pedigree_example4.tgf  pedigree_example5.tgf  pedigree_example6.tgf  pedigree_example7.tgf  pedigree_example8.tgf  pedigree_large.tgf
examples/RM/: Edward.csv  William.csv  mutation_rates.csv
manuscript/haplotypes/: known_plus1.csv  known_plus2.csv  known_plus3.csv  suspect.csv
manuscript/mutationrates/: 2.csv  5.csv
manuscript/pedigrees/: basepedigreeA.tgf  basepedigreeB.tgf  basepedigreeC.tgf  basepedigreeD.tgf  basepedigreeE.tgf  basepedigreeF.tgf  basepedigreeG.tgf  basepedigreeH.tgf  basepedigreeI.tgf
matchy/: .gitignore  Cargo.toml  InstallationLog.txt
matchy/.cargo/: config.toml
matchy/crates/matchy-app/: Cargo.toml  build.ps1  tauri.conf.json
matchy/crates/matchy-app/capabilities/: default.json
matchy/crates/matchy-app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
matchy/crates/matchy-app/frontend/src/: App.tsx  index.css
matchy/crates/matchy-app/frontend/src/components/: ConvergenceChart.tsx  GuidedTour.tsx
matchy/crates/matchy-app/frontend/src/hooks/: useSimulation.ts
matchy/crates/matchy-app/frontend/src/i18n/: de.ts  en.ts  es.ts  fr.ts  index.ts  nl.ts  pt.ts  types.ts  zh.ts
matchy/crates/matchy-app/frontend/src/pages/: HaplotypeEditor.tsx  Home.tsx  MarkerSets.tsx  PedigreeBuilder.tsx  Settings.tsx
matchy/crates/matchy-app/frontend/src/store/: appStore.ts
matchy/crates/matchy-app/frontend/src/types/: matchy.ts
matchy/crates/matchy-app/frontend/src/utils/: pedigreeSvg.ts  session.ts
matchy/crates/matchy-app/icons/: icon.icns
matchy/crates/matchy-app/src/: lib.rs  main.rs  progress.rs  state.rs
matchy/crates/matchy-app/src/commands/: haplotypes.rs  markersets.rs  mod.rs  pedigree.rs  report.rs  simulation.rs  updates.rs
matchy/crates/matchy-cli/: Cargo.toml
matchy/crates/matchy-cli/src/: main.rs
matchy/crates/matchy-core/: Cargo.toml
matchy/crates/matchy-core/src/: graph.rs  hungarian.rs  lib.rs  models.rs
matchy/crates/matchy-core/src/simulation/: bias.rs  convergence.rs  importance.rs  mod.rs  mutation.rs  probability.rs
matchy/crates/matchy-io/: Cargo.toml
matchy/crates/matchy-io/src/: config.rs  haplotypes_json.rs  kits.rs  lib.rs  marker_csv.rs  mutation_rates.rs  ped.rs  tgf.rs
matchy/crates/matchy-report/: Cargo.toml
matchy/crates/matchy-report/src/: html.rs  lib.rs
matchy/crates/matchy-report/templates/: report.html  trace_report.html
pages/: 2_🏗️_Pedigree_builder.py  3_📝_Haplotypes_editor.py  4_📊_Marker_sets.py  5_⚙️_Software_setting.py  pedigree_builder.py  🏗️_Pedigree_builder.py  📊_Marker_sets.py  📝_Haplotypes_editor.py
pedigree/: config.py  data.py  models.py  reporting.py  simulation.py  visualization.py
pedigree_lr/: config.py  config_generator.py  data.py  models.py  reporting.py  simulation.py  simulation_adaptive.py  simulation_backup.py  visualization.py
python/: 1_🧬_Home.py  Dockerfile  Dockerfile.cli  IMPLEMENTATION.md  compare_run.py  mypy.ini
python/data/: mutation_rates.csv  mutation_rates_backup.csv  (+2 more)
(+338 files in other folders)
