[package]
name = "matchy-cli"
description = "Command-line interface for MatchY"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "matchy"
path = "src/main.rs"

[dependencies]
matchy-core = { path = "../matchy-core" }
matchy-io = { path = "../matchy-io" }
matchy-report = { path = "../matchy-report" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
