[package]
name = "matchy-io"
description = "File I/O and configuration for MatchY"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
matchy-core = { path = "../matchy-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
